<resources>
    <string name="app_name">Seropervalence Survey Pakistan - 2016/17 </string>
    <string name="section_A"> سیکشن \'اے\': گھر کی شناخت </string>
    <string name="mnDob">تاریخ پیدائش</string>
    <string name="mnAge">عمر</string>
    <string name="mnMonths">ماہ</string>
    <string name="mnDays">دن</string>
    <string name="mnSex">جنس</string>
    <string name="mnMale">مرد</string>
    <string name="mnFemale">عورت</string>
    <string name="mnYES">ہاں</string>
    <string name="mnNO">نہیں</string>
    <string name="mnDNK">معلوم نہیں</string>
    <string name="mnOther">کوئی اور (وضاحت کریں)۔</string>
    <string name="nextSection">اگلا سیکشن</string>
    <string name="endForm">اختتام</string>
    <string name="digits">1234567890.,+=-qwertyuiopasdfghjklzxcvbnm ?%#@!&amp;QWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="mnfrmno"> ڈی ایم یو سیریل نمبر </string>
    <string name="mnsid"> تحقیقی شناخت نمبر </string>
    <string name="formDate"> دورے کی تاریخ </string>
    <string name="user"> انٹرویو کرنے والے کا نام </string>
    <string name="mna2nm"> انٹرویو کرنے والے کا نام </string>
    <string name="mna3"> فیلڈ سائیٹ/ضلع </string>
    <string name="mna4"> پی ایس یو نمبر اور نام </string>
    <string name="mna5"> گھرانے کا نمبر </string>
    <string name="mna5_ext"> خاندان نمبر </string>
    <string name="mna6"> منتخب بچے کا نام (لائن لسٹنگ کے مطابق) </string>
    <string name="mna7"> دورے کا نتیجہ </string>
    <string name="mna7a"> مکمل </string>
    <string name="mna7b"> گھر بند تھا </string>
    <string name="mna7c"> منع کردیا </string>
    <string name="mna8"> گھر کے سربراہ کا نام </string>
    <string name="mna9"> جواب دینے والے کا نام </string>
    <string name="mna10"> جواب دینے والے کا منتخب بچے سے رشتہ </string>
    <string name="mna10a"> ماں </string>
    <string name="mna10b"> والد </string>
    <string name="mna10c"> بہن </string>
    <string name="mna10d"> بھائی </string>
    <string name="mna10e"> دادا/دادی/نانا/نانی </string>
    <string name="mna11"> جواب دینے والے کی عمر سالوں میں </string>
    <string name="mna12"> جواب دینے والے کی تعلیمی قابلیت </string>
    <string name="mna12a"> Illiterate ان پڑھ/ناخواندہ </string>
    <string name="mna12b"> Primary بنیادی/پرائمری </string>
    <string name="mna12c"> SSC دسویں  </string>
    <string name="mna12d"> HSC بارھویں </string>
    <string name="mna12e"> Graduation چودھویں </string>
    <string name="mna12f"> Masters سولہویں </string>
    <string name="mna12g"> Religious Education دینی تعلیم </string>
    <string name="mna13"> پانچ سال سے کم عمر بچوں کی تعداد (بشمول منتخب بچےکے) </string>
    <string name="section_B">سیکشن بی: منتخب بچے کی تفصیلات</string>
    <string name="mnb1"> بچے کا نام </string>
    <string name="mnb2"> والد کا نام/ولدیت </string>
    <string name="mnb3"> ماں کا نام </string>
    <string name="mnb4"> ماں یا باپ کا شناختی کارڈ نمبر </string>
    <string name="mnb4x96"> شناختی کارڈ موجود نہِیں </string>
    <string name="mnb5"> تاریخ پیدائش </string>
    <string name="mnb6">  بچے کی عمر </string>
    <string name="mnb6mm"> بچے کی عمر (ماہ) </string>
    <string name="mnb6yy"> بچے کی عمر (دن) </string>
    <string name="mnb7"> بچے کی جنس </string>
    <string name="section_C">سیکشن سی : ٹیکوں کی معلومات</string>
    <string name="section_C1">معمول کے ٹیکے</string>
    <string name="section_C2">اضافی ٹیکے</string>
    <string name="section_C3">سفر کی غرز سے ٹیکے</string>
    <string name="mnc1"> کیا کبھی بھی (بچے کا نام) کو حفاظتی ٹیکے لگائے گئے؟ </string>
    <string name="mnc2"> کیا (بچے کا نام) کے پاس حفاظتی ٹیکوں کا کارڈ موجود ہے جس میں حفاظتی ٹیکہ جات کا اندراج موجود ہے؟ </string>
    <string name="mnc3"> اگر ہاں تو کیا میں وہ دیکھ سکتا/سکتی ہوں؟ </string>
    <string name="mnc3a"> موجود ہے اور دیکھاہے </string>
    <string name="mnc3b"> اگر ہاں تو کیا میں وہ دیکھ سکتا/سکتی ہوں؟ </string>
    <string name="mnc4"> اگر نہیں تو کیا (بچے کا نام) کو کبھی ٹیکوں والا کارڈ تھا؟ </string>
    <string name="mnc5"> اگر ٹیکے لگائے گئے ہیں تو معلومات لکھیں۔ </string>
    <string name="mnc5_0"> پیدائش کے وقت </string>
    <string name="mnc5bcg"> BCG </string>
    <string name="mnc5opv0"> OPV0 </string>
    <string name="mnc5_1"> چھ ہفتے کی عمر میں </string>
    <string name="mnc5p1"> Penta1 </string>
    <string name="mnc5pcv1"> PCV1 </string>
    <string name="mnc5opv1"> OPV1 </string>
    <string name="mnc5_2"> دس ہفتے کی عمر میں </string>
    <string name="mnc5p2">  Penta2 </string>
    <string name="mnc5pcv2"> PCV2 </string>
    <string name="mnc5opv2"> OPV2 </string>
    <string name="mnc5_3"> چودہ ہفتے کی عمر میں </string>
    <string name="mnc5p3"> Penta3 </string>
    <string name="mnc5pcv3"> PCV3 </string>
    <string name="mnc5opv3"> OPV3 </string>
    <string name="mnc5ipv1"> IPV </string>
    <string name="mnc5_4"> نو ماہ کی عمر میں  </string>
    <string name="mnc5m1"> Measles 1 </string>
    <string name="mnc5ipv2"> IPV </string>
    <string name="mnc5_5">  پندرہ ماہ کی عمر میں </string>
    <string name="mnc5m2">  Measles 2 </string>
    <string name="mnc5ipv3"> IPV </string>
    <string name="mnc6"> کیا (بچے کا نام) نے کبھی گھر میں پولیو سے بچاؤ کے قطرے پیئے ہیں؟ </string>
    <string name="mnc7"> کیا گزشتہ مہم کے دوران (بچے کا نام) نے پولیو سے بچاؤ کے قطرے پیئے ہیں ؟ </string>
    <string name="mnc8"> (بچے کا نام) نے گھر میں کتنی دفعہ پولیو سے بچاؤ کے قطرے پیئے ہیں ؟ </string>
    <string name="mnc9"> کیا بچے کو پولیو کے بچاؤکے لیے ران میں پولیو کا ٹیکہ لگوایا گیا؟ (ٹیکوں کے شیڈول کے علاوہ) </string>
    <string name="mnc10"> اگر ہاں تو، بچے کو پولیو کا ٹیکہ کب لگوایا گیا؟ (تاریخ) </string>
    <string name="mnc10yy"> سال </string>
    <string name="mnc10mm"> ماہ </string>
    <string name="mnc11"> کس جگہ سے بچے کو IPV کا ٹیکہ لگوایا گیا؟ </string>
    <string name="mnc11a"> سرکاری مرکز صحت </string>
    <string name="mnc11b"> نجی مرکز صحت </string>
    <string name="mnc11c"> ای پی آئی مرکز صحت </string>
    <string name="mnc11d"> این جی او </string>
    <string name="mnc12"> کیا آپ کے بچے نے گزشتہ چھ ماہ کے دوران وٹامن اے کی اضافی خوراک حاصل کی؟ </string>
    <string name="mnc13"> کیا (بچے کا نام) نے کبھی بھی سفر کے دوران چیک پوائنٹ پر پولیو کے قطرے پئیے؟ </string>
    <string name="mnc13c"> سفر نہیں کیا </string>
    <string name="section_D">سیکشن ڈی : بچے کی صحت کی معلومات</string>
    <string name="mnd1"> کیا گزشتہ دو ہفتوں کے دوران (بچے کا نام) کو کھانسی یا زکام ہوا تھا؟ </string>
    <string name="mnd2"> کیا گزشتہ دو ہفتے کے دوران (بچے کا نام) کو سانس لینے میں شکایت ہوئی تھی؟ </string>
    <string name="mnd3"> کیا گزشتہ دو ہفتے کے دوران (بچے کا نام) کو سینہ چلنے کی شکایت ہوئی ہے؟ </string>
    <string name="mnd4"> کیا گزشتہ دو ہفتے کے دوران (بچے کا نام) کو دست ہوئے ہیں؟ (دست سے مراد بچے کو 2 دن تک 3یاا س سے ذیادہ بار پتلے پاخانے ہونا) </string>
    <string name="mnd5"> کیا بچہ اس وقت کسی بیماری میں مبتلا ہے؟ </string>
    <string name="mnd6"> کیا آپ کا بچہ اس وقت ان میں سے کسی بیماری کا شکار ہے؟ </string>
    <string name="mnd6a"> (کھانسی/زکام ) </string>
    <string name="mnd6b"> (بخار) </string>
    <string name="mnd6c">(تیزی سے سانس لینا ) </string>
    <string name="mnd6d"> (سینے میں تکلیٖف) </string>
    <string name="mnd6e"> (دست) </string>
    <string name="mnd6f"> (پیچش) </string>
    <string name="mnd6g"> (قے/الٹی) </string>
    <string name="mnd6h"> (پیٹ کا درد) </string>
    <string name="mnd6i"> (پیشاب کے وقت رونا) </string>
    <string name="mnd7"> مشاہدہ کریں کے بچہ تیز سانس لے رہا ہے؟ </string>
    <string name="mnd8"> مشاہدہ کریں کہ بچے کا سینہ چل رہا ہے ؟ </string>
    <string name="mnd9"> کیا (بچے کا نام) گزشتہ چھ ماہ کے دوران کسی بیماری کی وجہ سے ہسپتال میں داخل کرنا پڑا؟ </string>
    <string name="mnd10"> اگر ہاں تو کس بیماری کی وجہ سے وضاحت کریں؟ جواہندہ جو بیماریا ں بتا رہا ہے اسکو درج کریں </string>
    <string name="mnd10a"> کھانسی/زکام </string>
    <string name="mnd10b"> بخار </string>
    <string name="mnd10c"> تیز سانس لینا </string>
    <string name="mnd10d"> سینہ چلنے کی شکایت </string>
    <string name="mnd10e"> دست </string>
    <string name="mnd10f"> پیچش </string>
    <string name="mnd10g"> قے/الٹی </string>
    <string name="mnd10h"> پیٹ کا درد </string>
    <string name="mnd10i"> پیشاب کے وقت رونا </string>
    <string name="mnd11"> کیا(بچے کا نام)نے کبھی ماں کا دودھ پیا ہے؟ </string>
    <string name="mnd12"> بچہ ابھی بھی ماں کا دودھ پیتا ہے </string>
    <string name="mnd13"> کیا (بچے کا نام) نے کل دن یا رات میں ماں کا دودھ پیا ہے؟ </string>
    <string name="mnd14"> کس عمر تک (بچے کا نام) نے ماں کا دودھ پیا ہے؟ </string>
    <string name="mnd15"> کیا (بچے کا نام) نے کل دن یا رات میں اِن میں سے کوئی مائع اشیاء استمال کی ہیں؟ </string>
    <string name="mnd15a"> سادہ پانی </string>
    <string name="mnd15b"> گلوکوز کا پانی </string>
    <string name="mnd15c"> جانور کا دودھ یا خشک دودھ </string>
    <string name="mnd15d"> پھلوں کا جوس یا شربت </string>
    <string name="mnd15e"> یخنی یا سوپ </string>
    <string name="mnd15f"> دہی یا لسی </string>
    <string name="mnd15g"> پتلا دلیہ </string>
    <string name="mnd15h"> وٹامن کے قطرے یا کوئی دوا </string>
    <string name="mnd15i"> ORS / نمکول </string>
    <string name="imfrmno"> ڈی ایم یو سیریل نمبر </string>
    <string name="imchid"> بچے کی آئ ڈی </string>
    <string name="imcompid">  </string>
    <string name="ima"> بچے کا نام </string>
    <string name="imaf"> بچے کے والد کا نام </string>
    <string name="imrwic"> منتخب شدہ بچے سے رشتہ </string>
    <string name="imrwica"> بہن/بھائی </string>
    <string name="imrwicx"> دیگر - (وضاحت درکار نہیں) </string>
    <string name="imb"> بچے کی جنس </string>
    <string name="imc"> حفاظتی ٹیکوں کاکارڈ موجود ہے یا نہیں </string>
    <string name="imd"> بچے کی تاریخ پیدائش </string>
    <string name="ime"> عمر </string>
    <string name="imey"> دن </string>
    <string name="imem"> مہینے </string>
    <string name="imed"> سال </string>
    <string name="imf"> کیا بچے کوپچھلے 6 ماہ کے دوران وٹامن اے کے قطرےپلا ئے گئے؟ </string>
    <string name="img"> کیا بچے نے کبھی بھی پولیو کے قطرے پیئے ہیں </string>
    <string name="imh"> کیا پچھلی مہم کے دوران بچے کو پولیو کے قطرے پلا ئےگئے؟ </string>
    <string name="imi"> کیا انگلی پر EPI کا نشان موجود ہے؟ </string>
    <string name="mnCHNP"> بچہ موجود نہیں </string>
    <string name="imj"> پولیو مہم کے دوران پولیو کی کتنی خوراکیں دی گیئں؟ </string>
    <string name="imk"> کیا کبھی بچے کو پولیو کا تیکا لگا ہے؟ </string>
    <string name="iml"> پولیو کے ٹیکے کی source لکھیں </string>
    <string name="imm"> بچے کو پولیو کا ٹیکہ کہاں سے لگوایا ہے </string>
    <string name="im_0"> (At Birth) </string>
    <string name="im_1"> (At 6 Weeks) </string>
    <string name="section_E">سیکشن ای: ٹیکوں کے بارے میں معلومات</string>
    <string name="mne1"> کیا آپ نے کبھی حفاظتی ٹیکوں کے بارے میں سنا ہے؟ اگر جواب 2 یا 99 ہے تو E.4 پر جائیں اور اگر 1 ہے تو E.2 پوچھیں </string>
    <string name="mne2"> آپ نے ٹیکوں کے بارے میں معلومات کہاں سے حاصل کی؟ </string>
    <string name="mne2a"> (ٹی وی) </string>
    <string name="mne2b"> (ریڈیو) </string>
    <string name="mne2c"> (اخبار) </string>
    <string name="mne2d"> (پوسٹر) </string>
    <string name="mne2e"> (صحت کے کارکنان) </string>
    <string name="mne2f"> (مسجد کے امام) </string>
    <string name="mne2g"> (مقامی قائدین) </string>
    <string name="mne2h"> (خاندان) </string>
    <string name="mne2j"> (صحت کے کارکن سے) </string>
    <string name="mne3"> کیا آپ جانتے ہیں کے ٹیکے کس بیماریوں سے بچاتے ہیں؟ </string>
    <string name="mne4"> کیا آپ ایسی بیماریوں کے بارے میں جانتے ہیں جس سے بچاؤ کے ٹیکے پاکستان میں لگائیں جاتے ہیں ؟ </string>
    <string name="mne4a"> (پولیو) </string>
    <string name="mne4b"> (ٹی بی) </string>
    <string name="mne4c"> (خناق) </string>
    <string name="mne4d"> (کالی کھانسی) </string>
    <string name="mne4e"> (خسرے) </string>
    <string name="mne4f"> (پی لیا) </string>
    <string name="mne4g"> (تشنج) </string>
    <string name="mne4h"> (حمل کے دوران جھٹکے) </string>
</resources>