<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_section_E"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.aku.hassannaqvi.pssp.SectionEActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/section_E"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:typeface="serif" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mne1" />


        <RadioGroup
            android:id="@+id/mne1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/mne1a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mnYES" />

            <RadioButton
                android:id="@+id/mne1b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mnNO" />


            <RadioButton
                android:id="@+id/mne1c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mnDNK" />


        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mne2" />

        <CheckBox
            android:id="@+id/mne2a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne2a"

            />

        <CheckBox
            android:id="@+id/mne2b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne2b"

            />

        <CheckBox
            android:id="@+id/mne2c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne2c" />


        <CheckBox
            android:id="@+id/mne2d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne2d" />

        <CheckBox
            android:id="@+id/mne2e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne2e" />

        <CheckBox
            android:id="@+id/mne2f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne2f" />

        <CheckBox
            android:id="@+id/mne2g"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne2g" />

        <CheckBox
            android:id="@+id/mne2h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne2h" />

        <CheckBox
            android:id="@+id/mne2j"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne2j" />

        <CheckBox
            android:id="@+id/mne2k"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne2k" />

        <CheckBox
            android:id="@+id/mne2x96"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne2x96" />

        <EditText
            android:id="@+id/mne2x96a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mne2x96" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mne3" />


        <RadioGroup
            android:id="@+id/mne3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/mne3a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mnYES"

                />


            <RadioButton
                android:id="@+id/mne3b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mnNO"

                />

        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mne4" />

        <CheckBox
            android:id="@+id/mne4a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne4a"

            />


        <CheckBox
            android:id="@+id/mne4b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne4b" />

        <CheckBox
            android:id="@+id/mne4c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne4c" />

        <CheckBox
            android:id="@+id/mne4d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne4d" />

        <CheckBox
            android:id="@+id/mne4e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne4e" />

        <CheckBox
            android:id="@+id/mne4f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne4f" />


        <CheckBox
            android:id="@+id/mne4g"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne4g" />


        <CheckBox
            android:id="@+id/mne4h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne4h" />

 <CheckBox
            android:id="@+id/mne4j"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne4j" />

        <CheckBox
            android:id="@+id/mne4k"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne4k" />

 <CheckBox
            android:id="@+id/mne4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mne4" />








    </LinearLayout>
</ScrollView>